[workspace] 
members = [
    "learnings/catsay",
    "learnings/my_orbtk",
    # "numbers",
     "favors",
    
    #  "books/srqc",
     "books/in_action",
     "books/with_rocket",
     "books/daysofrust",
    # "books/fullstack",
    "books/design_patterns",
    "books/rp4b",
    "books/intro2p",
    "books/rust101",
    "books/rust_cli",
    "books/zero2prod",
    "books/web_dev",
    "books/geektime/scrape_url",
    "books/pngme",
    "books/easy_rust",
    "books/rustcc",
    "books/cookbook",
   

    "whale",
    "hardway",
    # "starters/api",
    # "learnings/intro2rust",
    # "learnings/hi_rocket",
    # "learnings/hi_usb",
    "learnings/my-redis",
    "learnings/line_editor",
    "learnings/numbers",
    "learnings/hi_regex",
    "learnings/hi_mongo",
    "learnings/hi_radix",
    "learnings/hi_fltk",
    "learnings/hi_tauri",
    "learnings/hi_tauri/src-tauri",
    "learnings/hi_gtk4",
    "learnings/hi_sixtyfps",
    "learnings/hi_iced",
    "learnings/hi_dioxus",
    "learnings/hi_tokio",
    "learnings/hi_axum",
    "learnings/algo_ds",
    "learnings/my_macro",
    "learnings/hi_refinery",
    "learnings/hi_cursive",

    # 准备自己实现一个验证库 以便后期隔离出去
    # "crates/validation"
    "libs/*",
    # "libs/mylib" 

    "starters/console_app1",
    "starters/cli_app1",
    "starters/multi_bin",
    "starters/web_scraper",
    "starters/web_scraper2",

    # 
    "projects/*",
    # 
    "recipes/*",
    "recipes/db_orm/migration",
    "recipes/db_orm/entity",
]
#  多个sqlite 库会干扰 运行时候排除下 
# @see https://doc.rust-lang.org/cargo/reference/workspaces.html
exclude = ["recipes/db_sqlite", ]


default-members = ["hardway"]



