[package]
name = "favors"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.1.8"
#seahorse = "1.0.0"

log = "0.4"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"

fastrand = "1.8.0"

#
url = "2.2.2"
serde_urlencoded = "0.7.1"

sysinfo = "0.26.4"

# jwt
jsonwebtoken = "8"
# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "8", default-features = false }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

notify-rust = "4"
liquid = "0.26.0"
tempfile = "3"
schemars = { version = "0.8.8", features = ["chrono"] }

# time related
chrono = "0.4.19"
# cron = { git = "https://github.com/mehcode/cron", branch = "error-chain" }
# cron = { git = "https://github.com/zslayton/cron"  }
tokio-cron-scheduler = "*"

# async
tokio = { version = "1.18.2", features = ["full"] }

itertools = "0.10.3"

[dev-dependencies]
serde_derive = "1"