[package]
name = "hardway"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.0.0"
anyhow = "1.0"

# for learn async 
futures = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
rayon = "1.5.3"
