[package]
name = "hardway"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.0.0"

# error handling
thiserror = "1.0.31"
anyhow = "1.0"
color-eyre = "0.6.2"

# for learn async 
futures = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
rayon = "1.5.3"

# date and time
chrono = "0.4.19"
clokwerk = "0.3.5"

# hashmap 
maplit = "1.0"

# tree 
radix_trie = "0.2.1"

# configure
config = "0.13.2"


# utilities
uuid = { version = "1.1.1", features = ["std","v4","serde"] }

# 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"