[package]
name = "hardway"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.0.0"

# Strum is a set of macros and traits for working with enums and strings easier in Rust.
strum = "0.24"
strum_macros = "0.24"

# error handling
thiserror = "1.0.31"
anyhow = "1.0"
color-eyre = "0.6.2"

# for learn async 
futures = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
rayon = "1.5.3"

# date and time
time = { version = "0.3", features = ["macros"] }
chrono = "0.4.19"
clokwerk = "0.4.0"

# hashmap 
maplit = "1.0"

# tree 
radix_trie = "0.2.1"

# configure
# config = "0.13.2"
config = { version = "0.13.3", features = ["toml"] }

once_cell = "1.16.0"


# utilities
uuid = { version = "1.1.1", features = ["std","v4","serde"] }

# 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.12.0"


# log and tracing
log = "0.4.17"
env_logger = "0.10.0"
log4rs = "1.2.0"

tracing = { version = "0.1", features = ["log"] } 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# sync 额外功能
parking_lot = "0.12.1"

# Typed distributed plugin registration 插件注册
inventory = "0.3.5"
lazy_static = "1.4.0"

regex = "1.8.1"