[package]
name = "in_action"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.1.0"

whale = { path = "../../whale" }

num = "0.4"
regex = "1"
clap = "3.2.8"
rand = "0.8.5"
