[package]
name = "in_action"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.1.0"

whale = { path = "../../whale" }

num = "0.4"
regex = "1"
clap = "3.2.15"
rand = "0.8.5"


piston_window = "0.123.0"
piston2d-graphics = "0.42.0"

# winapi = "0.3.9"
# kernel32-sys = "0.2"

# ch7
serde_json = "1.0"
bincode = "1"
serde = "1"
serde_cbor = "0.11.2"
serde_derive = "1"

#ch8
reqwest = { version = "0.11", features = ["blocking", "json"] }

#ch9
chrono = "0.4.19"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
