[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.16.2"
log = "0.4"
env_logger = "0.9.0"
dotenv = "0.15.0"