[package]
name = "srqc"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whale = { path = "../../whale" }
seahorse = "1.1"
#
clap = "2.33.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
escaper = "0.1.0"
regex = "1.3.1"
prettytable-rs = "^0.8"
madato = "0.5.3"
hex = "0.4.0"