[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = "0.6.2"

async-stream = "0.3"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"