[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = "0.6.2"

serde = { version = "1", features = ["derive"]}

config = "0.13.1"

async-stream = "0.3"
env_logger = "0.9"
log = "0.4"

# Using table-like toml syntax to avoid a super-long line! 
[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [ "runtime-actix-rustls", "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"
tokio = "1.17.0"