[package]
name = "hi_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15"}
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0.160" , features = ["derive", ]}
serde_json = { version = "1"}


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"