[package]
name = "hi_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15"}
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0.160" , features = ["derive", ]}
serde_json = { version = "1"}

tower-http = { version = "0.4" , features = ["fs" ,"trace"]}
tower-cookies = "0.9.0"

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"