[package]
name = "hi_mongo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0-beta.1" , default-features = false ,   features = ["sync"]}
serde ="*"
serde_json="*"
serde_derive="*"

bson = "*"