[package]
name = "hi_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4.1"

futures = "0.3.21"

bytes = "1.1.0"

# topics
tracing = "0.1.18"
tracing-subscriber = "0.3"
serde_json = "1"