[package]
name = "my_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
heck = "0.4.0"

syn = "1.0"
quote = "1.0"