[package]
name = "my_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
heck = "0.4.0"
askama = "0.11.1"

syn = { version ="1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.13.2"