[package]
name = "ezytutors"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"


[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2" #1 
actix-rt = "2.7"

# Data serialization library
serde = { version = "1.0", features = ["derive"] } 
# Other utilities
chrono = {version = "0.4", features = ["serde"]}