[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.24" 
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.2"
#  logging facade library
log = "0.4.17"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "2.0.4", features = ["postgres", "chrono"] }

diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }