[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.1.1"
log = "0.4.14"
env_logger = "0.10.0"
rustyline-derive = "0.7.0"
clap = "4.1.4"

# TODO: should check this crate to learn how to write a parser!
sqlparser = "0.30.0"
