[package]
name = "api_axum0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.33", features = ["full"] }

# db
# libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
# axum-sqlite = "0.1.0"

rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = { version = "~0.8", default-features = false }
r2d2_sqlite = { version = "0.22", features=["bundled"] }

