[package]
name = "hi_es"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
elasticsearch-dsl = "0.4"

tokio = { version = "1", features = ["full"] }

serde = "~1"
serde_json = "~1"