[package]
name = "hi_meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.28"
serde_json= "1.0.59"
meilisearch-sdk = "0.23.0"
serde = { version = "1.0.159", features = ["derive"] }
pinyin= "0.9.0"
lazy_static = "1.4.0"