[package]
name = "hi_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }

# serde_json = "1.0"
bson = "2.5.0"

futures = "0.3"

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-runtime"]