[package]
name = "hi_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# redis = "0.22.3"
# 连接池 r2d2 for sync and bb8 for async.
redis = { version = "0.22.3", features = ["r2d2", "cluster", "connection-manager", "tokio-comp", "tokio-native-tls-comp"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0" #这个库是不是冗余了？

rust-crypto = "0.2.36"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_derive = "1.0.152"

derive-redis-json = "0.1.1"

# 时间处理
chrono = "0.4.23"
