[package]
name = "hi_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tempfile = "3.3.0"

tantivy = { git = "https://github.com/tantivy-search/tantivy.git", branch = "main"}
cang-jie = { git = "https://github.com/yiv/cang-jie.git" }
#cang-jie = { path = "../../../../rust/cang-jie" }
jieba-rs = "0.6.2"
anyhow = "1.0.36"
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
htmlescape = "0.3.1"
tokio = { version = "^1.25.0", features = ["full"] }
log = "0.4"