[package]
name = "hi_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.2", features = ["full"] } 
warp = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.17"
env_logger = "0.10.0"