[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
json = "0.12.4"
lazy_static = "1.4.0"

# html document pasers
crabquery = "0.1.9"
visdom = "0.5.5"


# download crate
# downloader = "0.2.6"

[dependencies.async-std]
version = "1.12.0"
default-features = false
features = ["std"]
