[package]
name = "web_scraper2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = "1.21.1"


rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio-rusqlite = "0.3.0"